objects/Personnel_Assignment__c.object
<CustomObject>
    <description>Represents the assignments of personnel to specific emergency response sites, allowing for tracking of roles, dates, and site-specific responsibilities for each individual. The object creates a link between response sites and personnel, enabling many-to-many relationships and detailed reporting for resources allocation and staffing at each site</description>
    <label>Personnel Assignment</label>
    <nameField>
        <displayFormat>PA-{00000000}</displayFormat>
        <label>Personnel Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Personnel Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emergency Contact</fullName>
                </value>
                <value>
                    <fullName>Logistics Coordinator</fullName>
                </value>
                <value>
                    <fullName>Medical Staff</fullName>
                </value>
                <value>
                    <fullName>Volunteer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personnel__c</fullName>
        <label>Personnel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Personnel Assignments</relationshipLabel>
        <relationshipName>Personnel_Assignments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daily_Stipen__c</fullName>
        <label>Daily Stipen</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Duration_in_Days__c</fullName>
        <formula>End_Date__c -  Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>